Fix deep analysis preview and PRD display for Vue multi-file projects.
Prevent Selenium screenshot interrupts, preserve full multi-file app_code sync, sanitize PRD text without code, and compile Vue/Vite previews in a sandbox to avoid ESM import errors in iframe preview.

Co-authored-by: Cursor <cursoragent@cursor.com>